--- a/src/pages/Newtab/index.css
+++ b/src/pages/Newtab/index.css
@@ -11,7 +11,12 @@ body {
 #app-container {
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
   position: relative;
+  background: url('../../assets/img/space-background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 code {
