--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,12 @@ body {
   display: flex;
   justify-content: center;
   position: relative;
-  background: url('./assets/img/space-background.webp');
+  background: url('./assets/img/space-background.webp') no-repeat center center
+    fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-repeat: no-repeat;
 }
 
 code {
