--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   width: 100vw;
   height: 100vh;
-  margin: 0;
+  margin: 0px;
   font-family: 'Montserrat', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
     'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
